--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family:'Arial', sans-serif;
-    background-color: #f0f0f0;
+    background-color: #b4b4b4;
     display: flex;
     justify-content: center;
     align-items: center;
